--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 		<link rel="stylesheet" href="css/styles.css" />
 		<title>Студия</title>
 	</head>
@@ -19,20 +20,20 @@
 		<header class="menu-top">
 			<!-- head of document left (main)-->
 			<a href="./index.html" class="logo-studio">
-				<p>
+				<p class="logo-header">
 					<span class="logo-web">Web</span>Studio
 				</p>
 			</a>
 			<!-- head of document center (menu)-->
 			<nav>
 				<ul class="menu-top-center">
-					<li>
+					<li class="item">
 						<a class="menu-item current" href="./index.html">Студия</a>
 					</li>
-					<li>
+					<li class="item">
 						<a class="menu-item" href="./portfolio.html">Портфолио</a>
 					</li>
-					<li>
+					<li class="item">
 						<a class="menu-item" href="#">Контакты</a>
 					</li>
 				</ul>
@@ -41,95 +42,101 @@
 			<ul class="contacts">
 				<!-- e-mail -->
 				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a href="mailto:info@devstudio.com" class="mail-top">info@devstudio.com</a>
 				</li>
 				<!-- phone -->
 				<li>
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+					<a href="tel:+380961111111" class="phone-top">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
 		<!-- main -->
 		<main>
-			<section class="top-main">
+			<section class="top-main section">
 				<h1 class="top-main-text">Эффективные решения для вашего бизнеса</h1>
 				<button type="button" class="top-main-button">Заказать услугу</button>
 			</section>
-			<section class="middle-main">
-				<h2 class="menu-item-name">Наши лучшие качества</h2>
-				<ul class="middle-main-list">
-					<li>
-						<h3>Внимание к деталям</h3>
-						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-					</li>
-					<li>
-						<h3>Пунктуальность</h3>
-						<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-					</li>
-					<li>
-						<h3>Планирование</h3>
-						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-					</li>
-					<li>
-						<h3>Современные технологии</h3>
-						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-					</li>
-				</ul>
-				<h2 class="menu-item-name">Чем мы занимаемся</h2>
-				<ul class="middle-main-list">
-					<li>
-						<img
-							src="images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
-							alt="программист работающий в офисе"
-							width="370"
-						/>
-					</li>
-					<li>
-						<img
-							src="images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
-							alt="веб-дизайнеры разрабатывают интерфейс приложений для смартфонов"
-							width="370"
-						/>
-					</li>
-					<li>
-						<img
-							src="images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
-							alt="художник с рабочей цветовой гаммой в графическом планшете"
-							width="370"
-						/>
-					</li>
-				</ul>
+			<section class="middle-main section">
+				<div class="container">
+					<h2 class="menu-item-name visually-hidden">Наши преимущества</h2>
+					<ul class="middle-main-list">
+						<li class="middle-main-item">
+							<h3>Внимание к деталям</h3>
+							<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+						</li>
+						<li class="middle-main-item">
+							<h3>Пунктуальность</h3>
+							<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+						</li>
+						<li class="middle-main-item">
+							<h3>Планирование</h3>
+							<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+						</li>
+						<li class="middle-main-item">
+							<h3>Современные технологии</h3>
+							<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+						</li>
+					</ul>
+				</div>
+				<div class="container what-we-do">
+					<h2 class="menu-item-name">Чем мы занимаемся</h2>
+					<ul class="middle-main-list">
+						<li>
+							<img
+								src="images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
+								alt="программист работающий в офисе"
+								width="370"
+							/>
+						</li>
+						<li>
+							<img
+								src="images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
+								alt="веб-дизайнеры разрабатывают интерфейс приложений для смартфонов"
+								width="370"
+							/>
+						</li>
+						<li>
+							<img
+								src="images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
+								alt="художник с рабочей цветовой гаммой в графическом планшете"
+								width="370"
+							/>
+						</li>
+					</ul>
+				</div>
 			</section>
-			<section class="bottom-main">
-				<h2 class="menu-item-name">Наша команда</h2>
-				<ul class="bottom-main-list">
-					<li>
-						<img src="images/4853.jpg" alt="Игорь Демьяненко" width="270" />
-						<h3>Игорь Демьяненко</h3>
-						<p>Product Designer</p>
-					</li>
-					<li>
-						<img src="images/5844.jpg" alt="Ольга Репина" width="270" />
-						<h3>Ольга Репина</h3>
-						<p>Frontend Developer</p>
-					</li>
-					<li>
-						<img src="images/16166.jpg" alt="Николай Тарасов" width="270" />
-						<h3>Николай Тарасов</h3>
-						<p>Marketing</p>
-					</li>
-					<li>
-						<img src="images/2968.jpg" alt="Михаил Ермаков" width="270" />
-						<h3>Михаил Ермаков</h3>
-						<p>UI Designer</p>
-					</li>
-				</ul>
+			<section class="bottom-main section">
+				<div class="container">
+					<h2 class="menu-item-name">Наша команда</h2>
+					<ul class="bottom-main-list">
+						<li class="photo">
+							<img src="images/4853.jpg" alt="Игорь Демьяненко" width="270" />
+							<h3>Игорь Демьяненко</h3>
+							<p class="profession">Product Designer</p>
+						</li>
+						<li class="photo">
+							<img src="images/5844.jpg" alt="Ольга Репина" width="270" />
+							<h3>Ольга Репина</h3>
+							<p class="profession">Frontend Developer</p>
+						</li>
+						<li class="photo">
+							<img src="images/16166.jpg" alt="Николай Тарасов" width="270" />
+							<h3>Николай Тарасов</h3>
+							<p class="profession">Marketing</p>
+						</li>
+						<li class="photo">
+							<img src="images/2968.jpg" alt="Михаил Ермаков" width="270" />
+							<h3>Михаил Ермаков</h3>
+							<p class="profession">UI Designer</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 		<!-- footer -->
 		<footer class="menu-footer">
 			<a href="./index.html" class="logo-studio-footer">
-				<p>
+				<p class="logo-header logo-footer">
 					<span class="logo-web">Web</span>Studio
 				</p>
 			</a>
