--- a/portfolio.html
+++ b/portfolio.html
@@ -10,29 +10,29 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 		<link rel="stylesheet" href="css/styles.css" />
 		<title>Портфолио</title>
 	</head>
 	<body>
 		<!-- head of documeent -->
-
 		<header class="menu-top">
 			<!-- head of document left (main)-->
 			<a href="./index.html" class="logo-studio">
-				<p>
+				<p class="logo-header">
 					<span class="logo-web">Web</span>Studio
 				</p>
 			</a>
 			<!-- head of document center (menu)-->
 			<nav>
 				<ul class="menu-top-center">
-					<li>
+					<li class="item">
 						<a class="menu-item" href="./index.html">Студия</a>
 					</li>
-					<li>
+					<li class="item">
 						<a class="menu-item current" href="./portfolio.html">Портфолио</a>
 					</li>
-					<li>
+					<li class="item">
 						<a class="menu-item" href="#">Контакты</a>
 					</li>
 				</ul>
@@ -41,78 +41,98 @@
 			<ul class="contacts">
 				<!-- e-mail -->
 				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<a href="mailto:info@devstudio.com" class="mail-top">info@devstudio.com</a>
 				</li>
 				<!-- phone -->
 				<li>
-					<a href="tel:+380961111111">+38 096 111 11 11</a>
+					<a href="tel:+380961111111" class="phone-top">+38 096 111 11 11</a>
 				</li>
 			</ul>
 		</header>
 		<!-- main -->
 		<main>
-			<section>
-				<h1>Наши услуги</h1>
-				<ul class="filter-portfolio">
-					<li><button type="button">Все</button></li>
-					<li><button type="button">Веб-сайты</button></li>
-					<li><button type="button">Приложения</button></li>
-					<li><button type="button">Дизайн</button></li>
-					<li><button type="button">Маркетинг</button></li>
-				</ul>
-				<ul class="menu-portfolio">
-					<li>
-						<img src="images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370" />
-						<h2 class="menu-item-name">Технокряк</h2>
-						<p>Веб-сайт</p>
-					</li>
-					<li>
-						<img src="images/portfolio2.jpg" alt="Изображение двух баскетболистов" width="370" />
-						<h2 class="menu-item-name">Постер New Orlean vs Golden Star</h2>
-						<p>Дизайн</p>
-					</li>
-					<li>
-						<img src="images/portfolio-1.jpg" alt="Вывеска ресторана" width="370" />
-						<h2 class="menu-item-name">Ресторан Seafood</h2>
-						<p>Приложение</p>
-					</li>
-					<li>
-						<img src="images/portfolio-2.jpg" alt="Наушники" width="370" />
-						<h2 class="menu-item-name">Проект Prime</h2>
-						<p>Маркетинг</p>
-					</li>
-					<li>
-						<img src="images/portfolio5.jpg" alt="Две коробки" width="370" />
-						<h2 class="menu-item-name">Проект Boxes</h2>
-						<p>Приложение</p>
-					</li>
-					<li>
-						<img src="images/111.jpg" alt="Веб-сайт на экране монитора" width="370" />
-						<h2 class="menu-item-name">Inspiration has no Borders</h2>
-						<p>Веб-сайт</p>
-					</li>
-					<li>
-						<img src="images/portfolio7.jpg" alt="Открытая книга" width="370" />
-						<h2 class="menu-item-name">Издание Limited Edition</h2>
-						<p>Дизайн</p>
-					</li>
-					<li>
-						<img src="images/portfolio8.jpg" alt="Бирка с названием" width="370" />
-						<h2 class="menu-item-name">Проект LAB</h2>
-						<p>Маркетинг</p>
-					</li>
-					<li>
-						<img src="images/2910404.jpg" alt="Руки разработчика на клавиатуре ноутбука" width="370" />
-						<h2 class="menu-item-name">Growing Business</h2>
-						<p>Приложение</p>
-					</li>
-				</ul>
+			<section class="section">
+				<div class="container">
+					<h1 class="visually-hidden service-item">Наши услуги</h1>
+					<ul class="filter-portfolio">
+						<li class="button-item"><button type="button" class="button-portfolio">Все</button></li>
+						<li class="button-item"><button type="button" class="button-portfolio">Веб-сайты</button></li>
+						<li class="button-item"><button type="button" class="button-portfolio">Приложения</button></li>
+						<li class="button-item"><button type="button" class="button-portfolio">Дизайн</button></li>
+						<li class="button-item"><button type="button" class="button-portfolio">Маркетинг</button></li>
+					</ul>
+					<ul class="menu-portfolio">
+						<li class="service-item">
+							<img src="images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Технокряк</h2>
+								<p>Веб-сайт</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/portfolio2.jpg" alt="Изображение двух баскетболистов" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Постер New Orlean vs Golden Star</h2>
+								<p>Дизайн</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/portfolio-1.jpg" alt="Вывеска ресторана" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Ресторан Seafood</h2>
+								<p>Приложение</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/portfolio-2.jpg" alt="Наушники" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Проект Prime</h2>
+								<p>Маркетинг</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/portfolio5.jpg" alt="Две коробки" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Проект Boxes</h2>
+								<p>Приложение</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/111.jpg" alt="Веб-сайт на экране монитора" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Inspiration has no Borders</h2>
+								<p>Веб-сайт</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/portfolio7.jpg" alt="Открытая книга" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Издание Limited Edition</h2>
+								<p>Дизайн</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/portfolio8.jpg" alt="Бирка с названием" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Проект LAB</h2>
+								<p>Маркетинг</p>
+							</div>
+						</li>
+						<li class="service-item">
+							<img src="images/2910404.jpg" alt="Руки разработчика на клавиатуре ноутбука" width="370" />
+							<div class="service-item-text">
+								<h2 class="menu-item-name">Growing Business</h2>
+								<p>Приложение</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 		<!-- footer -->
-		<footer class="menu-footer">
+			<footer class="menu-footer">
 			<a href="./index.html" class="logo-studio-footer">
-				<p>
+				<p class="logo-header logo-footer">
 					<span class="logo-web">Web</span>Studio
 				</p>
 			</a>
