--- a/portfolio.html
+++ b/portfolio.html
@@ -18,110 +18,110 @@
 		<!-- head of documeent -->
 		<header class="menu-top">
 			<!-- head of document left (main)-->
-			<a href="./index.html" class="logo-studio">
-				<p class="logo-header">
-					<span class="logo-web">Web</span>Studio
-				</p>
-			</a>
-			<!-- head of document center (menu)-->
-			<nav>
-				<ul class="menu-top-center">
-					<li class="item">
-						<a class="menu-item" href="./index.html">Студия</a>
-					</li>
-					<li class="item">
-						<a class="menu-item current" href="./portfolio.html">Портфолио</a>
-					</li>
-					<li class="item">
-						<a class="menu-item" href="#">Контакты</a>
-					</li>
-				</ul>
-			</nav>
-			<!-- head of document right -->
-			<ul class="contacts">
-				<!-- e-mail -->
-				<li>
-					<a href="mailto:info@devstudio.com" class="mail-top">info@devstudio.com</a>
-				</li>
-				<!-- phone -->
-				<li>
-					<a href="tel:+380961111111" class="phone-top">+38 096 111 11 11</a>
-				</li>
-			</ul>
+			<div class="container">
+				<div class="flex">
+					<nav class="nav">
+						<a href="./index.html" class="logo-web-header">Web<span class="logo-studio-header">Studio</span></a>
+						<!-- head of document center (menu)-->
+						<ul class="menu-top-center">
+							<li class="item">
+								<a class="menu-item" href="./index.html">Студия</a>
+							</li>
+							<li class="item">
+								<a class="menu-item current" href="./portfolio.html">Портфолио</a>
+							</li>
+							<li class="item">
+								<a class="menu-item" href="#">Контакты</a>
+							</li>
+						</ul>
+					</nav>
+					<!-- head of document right -->
+					<ul class="contacts">
+						<!-- e-mail -->
+						<li class="item">
+							<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+						</li>
+						<!-- phone -->
+						<li class="item">
+							<a href="tel:+380961111111">+38 096 111 11 11</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</header>
 		<!-- main -->
 		<main>
-			<section class="section">
+			<section class="portfolio section">
 				<div class="container">
-					<h1 class="visually-hidden service-item">Наши услуги</h1>
+					<h1 class="visually-hidden">Наши услуги</h1>
 					<ul class="filter-portfolio">
-						<li class="button-item"><button type="button" class="button-portfolio">Все</button></li>
-						<li class="button-item"><button type="button" class="button-portfolio">Веб-сайты</button></li>
-						<li class="button-item"><button type="button" class="button-portfolio">Приложения</button></li>
-						<li class="button-item"><button type="button" class="button-portfolio">Дизайн</button></li>
-						<li class="button-item"><button type="button" class="button-portfolio">Маркетинг</button></li>
+						<li class="item"><button type="button">Все</button></li>
+						<li class="item"><button type="button">Веб-сайты</button></li>
+						<li class="item"><button type="button">Приложения</button></li>
+						<li class="item"><button type="button">Дизайн</button></li>
+						<li class="item"><button type="button">Маркетинг</button></li>
 					</ul>
 					<ul class="menu-portfolio">
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio1.jpg" alt="Веб-сайт на экране ноутбука" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Технокряк</h2>
+							<div class="item-text">
+								<h2>Технокряк</h2>
 								<p>Веб-сайт</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio2.jpg" alt="Изображение двух баскетболистов" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Постер New Orlean vs Golden Star</h2>
+							<div class="item-text">
+								<h2>Постер New Orlean vs Golden Star</h2>
 								<p>Дизайн</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio-1.jpg" alt="Вывеска ресторана" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Ресторан Seafood</h2>
+							<div class="item-text">
+								<h2>Ресторан Seafood</h2>
 								<p>Приложение</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio-2.jpg" alt="Наушники" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Проект Prime</h2>
+							<div class="item-text">
+								<h2>Проект Prime</h2>
 								<p>Маркетинг</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio5.jpg" alt="Две коробки" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Проект Boxes</h2>
+							<div class="item-text">
+								<h2>Проект Boxes</h2>
 								<p>Приложение</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/111.jpg" alt="Веб-сайт на экране монитора" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Inspiration has no Borders</h2>
+							<div class="item-text">
+								<h2>Inspiration has no Borders</h2>
 								<p>Веб-сайт</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio7.jpg" alt="Открытая книга" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Издание Limited Edition</h2>
+							<div class="item-text">
+								<h2>Издание Limited Edition</h2>
 								<p>Дизайн</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/portfolio8.jpg" alt="Бирка с названием" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Проект LAB</h2>
+							<div class="item-text">
+								<h2>Проект LAB</h2>
 								<p>Маркетинг</p>
 							</div>
 						</li>
-						<li class="service-item">
+						<li class="item">
 							<img src="images/2910404.jpg" alt="Руки разработчика на клавиатуре ноутбука" width="370" />
-							<div class="service-item-text">
-								<h2 class="menu-item-name">Growing Business</h2>
+							<div class="item-text">
+								<h2>Growing Business</h2>
 								<p>Приложение</p>
 							</div>
 						</li>
@@ -130,21 +130,21 @@
 			</section>
 		</main>
 		<!-- footer -->
-			<footer class="menu-footer">
-			<a href="./index.html" class="logo-studio-footer">
-				<p class="logo-header logo-footer">
-					<span class="logo-web">Web</span>Studio
-				</p>
-			</a>
-			<address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
-			<ul class="contacts-footer">
-				<li>
-					<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-				</li>
-				<li>
-					<a href="tel:+380991111111">+38 099 111 11 11</a>
-				</li>
-			</ul>
+		<footer class="menu-footer">
+			<div class="container">
+				<a href="./index.html" class="logo-web-footer">Web<span class="logo-studio-footer">Studio</span></a>
+				<address class="footer-address">
+					<p class="contacts-footer">г. Киев, пр-т Леси Украинки, 26</p>
+					<ul>
+						<li class="item">
+							<a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+						</li>
+						<li class="item">
+							<a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+						</li>
+					</ul>
+				</address>
+			</div>
 		</footer>
 	</body>
 </html>
