--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,10 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+		/>
 		<link rel="stylesheet" href="css/styles.css" />
 		<title>Портфолио</title>
 	</head>
@@ -21,7 +24,10 @@
 			<div class="container">
 				<div class="flex">
 					<nav class="nav">
-						<a href="./index.html" class="logo-web-header">Web<span class="logo-studio-header">Studio</span></a>
+						<a href="./index.html" class="logo-web-header">
+							Web
+							<span class="logo-studio-header">Studio</span>
+						</a>
 						<!-- head of document center (menu)-->
 						<ul class="menu-top-center">
 							<li class="item">
@@ -132,7 +138,10 @@
 		<!-- footer -->
 		<footer class="menu-footer">
 			<div class="container">
-				<a href="./index.html" class="logo-web-footer">Web<span class="logo-studio-footer">Studio</span></a>
+				<a href="./index.html" class="logo-web-footer">
+					Web
+					<span class="logo-studio-footer">Studio</span>
+				</a>
 				<address class="footer-address">
 					<p class="contacts-footer">г. Киев, пр-т Леси Украинки, 26</p>
 					<ul>
