formatted logo without spaces between words

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,7 @@
 			<div class="container">
 				<div class="flex">
 					<nav class="nav">
-						<a href="./index.html" class="logo-web-header">
-							Web
-							<span class="logo-studio-header">Studio</span>
-						</a>
+						<a href="./index.html" class="logo-web-header">Web<span class="logo-studio-header">Studio</span></a>
 						<!-- head of document center (menu)-->
 						<ul class="menu-top-center">
 							<li class="item">
@@ -138,10 +135,7 @@
 		<!-- footer -->
 		<footer class="menu-footer">
 			<div class="container">
-				<a href="./index.html" class="logo-web-footer">
-					Web
-					<span class="logo-studio-footer">Studio</span>
-				</a>
+				<a href="./index.html" class="logo-web-footer">Web<span class="logo-studio-footer">Studio</span></a>
 				<address class="footer-address">
 					<p class="contacts-footer">г. Киев, пр-т Леси Украинки, 26</p>
 					<ul>
